# fpe-arena

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY_NOTICE.md  sonar-project.properties
.github/workflows/: ci.yml  codeql.yml  sonarcloud.yml
docs/: architecture.md  benchmark-architecture.md  cli-architecture.md  impl_readme_template.md  stresstest-architecture.md  validation-architecture.md
implementations/ada/: .gitignore  README.md  alire.toml  ff3_ada.gpr
implementations/ada/config/: ff3_ada_config.ads  ff3_ada_config.gpr  ff3_ada_config.h  spark_ff3_config.ads  spark_ff3_config.h
implementations/ada/src/benchmark/: ff3_benchmark.adb  ff3_benchmark.adb.backup
implementations/ada/src/cli/: ff3_cli.adb
implementations/ada/src/ff3/: ff3_aes.adb  ff3_aes.ads  ff3_alphabets.adb  ff3_alphabets.ads  ff3_api.adb  ff3_api.ads  ff3_bigint.adb  ff3_bigint.ads  ff3_core.adb  ff3_core.ads  ff3_types.adb  ff3_types.ads
implementations/ada/src/stresstest/: ff3_stresstest.adb
implementations/ada/src/validate/: ff3_validate.adb
implementations/ada/tests/unit/: test_nist_vectors.adb
implementations/cpp/: .gitignore  CMakeLists.txt  README.md
implementations/cpp/apps/: ff3_benchmark.cpp  ff3_cli.cpp  ff3_stresstest.cpp  ff3_validate.cpp
implementations/cpp/cmake/: ff3Config.cmake.in
implementations/cpp/include/: ff3.hpp
implementations/cpp/include/ff3/: alphabets.hpp  api.hpp  core.hpp
implementations/cpp/src/: alphabets.cpp  api.cpp  core.cpp
implementations/cpp/tests/: test_alphabets.cpp  test_api.cpp  test_core.cpp  test_nist.cpp
implementations/dotnet/: .gitignore  FF3.sln  README.md
implementations/dotnet/FF3.Benchmark/: FF3.Benchmark.csproj  Program.cs
implementations/dotnet/FF3.CLI/: Program.cs
implementations/dotnet/FF3.Core/: FF3.Core.csproj  FF3API.cs  FF3Alphabets.cs  FF3Core.cs
implementations/dotnet/FF3.StressTest/: FF3.StressTest.csproj  Program.cs
implementations/dotnet/FF3.Tests/: FF3.Tests.csproj  FF3APITests.cs  FF3AlphabetsTests.cs  FF3CoreTests.cs  NistVectorTests.cs
implementations/dotnet/FF3.Validate/: Program.cs
implementations/erlang/: .gitignore  Makefile  README.md  rebar.config
implementations/erlang/apps/ff3/: rebar.config
implementations/erlang/apps/ff3/include/: ff3.hrl
implementations/erlang/apps/ff3/src/: ff3.app.src  ff3_alphabets.erl  ff3_api.erl  ff3_core.erl
implementations/erlang/apps/ff3/test/: ff3_SUITE.erl  test.config
implementations/erlang/apps/ff3_bench/: rebar.config
implementations/erlang/apps/ff3_bench/src/: ff3_bench.app.src  ff3_bench.erl
implementations/erlang/apps/ff3_cli/: rebar.config
implementations/erlang/apps/ff3_cli/src/: ff3_cli.app.src  ff3_cli.erl
implementations/erlang/apps/ff3_stresstest/: rebar.config
implementations/erlang/apps/ff3_stresstest/src/: ff3_stresstest.app.src  ff3_stresstest.erl
implementations/erlang/apps/ff3_validate/: rebar.config
implementations/erlang/apps/ff3_validate/src/: ff3_validate.app.src  ff3_validate.erl
implementations/go/: .gitignore  Makefile  README.md  go.mod
implementations/go/cmd/ff3-bench/: main.go
implementations/go/cmd/ff3-cli/: main.go
implementations/go/cmd/ff3-stresstest/: main.go
implementations/go/cmd/ff3-validate/: main.go
implementations/go/pkg/ff3/: ff3_alphabets.go  ff3_api.go  ff3_core.go  ff3_test.go  nist_ff3_test.go
implementations/haskell/: .gitignore  LICENSE  NOTICE  README.md  fpe-ff3.cabal  stack.yaml
implementations/haskell/app/: Benchmark.hs  CLI.hs  StressTest.hs  Validate.hs
implementations/haskell/src/: FF3.hs
implementations/haskell/src/FF3/: API.hs  Alphabets.hs  Core.hs
implementations/haskell/test/: Main.hs
implementations/java/: .gitignore  README.md  build.gradle  settings.gradle
implementations/java/ff3-benchmark/: build.gradle
implementations/java/ff3-benchmark/src/main/java/dev/horizondigital/ff3/benchmark/: FF3Benchmark.java
implementations/java/ff3-cli/: build.gradle
implementations/java/ff3-cli/src/main/java/dev/horizondigital/ff3/cli/: FF3CLI.java
implementations/java/ff3-core/: build.gradle
implementations/java/ff3-core/src/main/java/dev/horizondigital/ff3/: FF3API.java  FF3Alphabets.java  FF3Core.java
implementations/java/ff3-core/src/test/java/dev/horizondigital/ff3/: FF3APITests.java  FF3AlphabetsTests.java  FF3CoreTests.java  FF3NISTTests.java
implementations/java/ff3-stresstest/: build.gradle
implementations/java/ff3-validate/: build.gradle
implementations/javascript/: .gitignore  README.md  package.json
implementations/javascript/lib/: alphabets.js  api.js  core.js  index.js
implementations/javascript/test/: integration.test.js  test.js  unit.test.js
implementations/python/: .gitignore  README.md  setup.py
implementations/python/cli/: ff3_benchmark.py  ff3_cli.py  ff3_stresstest.py  ff3_validate.py
implementations/python/src/ff3/: __init__.py  ff3_alphabets.py  ff3_api.py  ff3_core.py
implementations/python/tests/: simple_test.py  test_ff3.py  test_ff3_alphabets.py  test_ff3_api.py  test_ff3_core.py  test_nist_vectors.py
implementations/rust/: .gitignore  Cargo.toml  README.md
implementations/rust/src/: alphabets.rs  api.rs  core.rs  lib.rs  main.rs
implementations/rust/tests/: integration_tests.rs
implementations/swift/: .gitignore  Package.resolved  Package.swift  README.md
implementations/swift/Sources/FF3/: FF3API.swift  FF3Alphabets.swift  FF3Core.swift
implementations/swift/Sources/FF3Benchmark/: main.swift
implementations/swift/Sources/FF3CLI/: main.swift
implementations/swift/Sources/FF3StressTest/: main.swift
implementations/swift/Sources/FF3Validate/: main.swift
implementations/swift/Tests/FF3Tests/: FF3Tests.swift
scripts/: analyze-benchmarks.py  clean.sh  run-all-benchmarks.sh  run-quick-benchmarks.sh  run-stress-test.sh
shared/benchmarks/: benchmark-config.json  benchmark-schema.json
shared/test-vectors/: nist_ff3_official_vectors.json
(+2 files in other folders)
